[package]
name = "Rust_lab_2023CS10058_2023CS10552_2023CS50163"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.22.1"

[dependencies]

lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
logos = "0.14"              # ARJUN YE DEKH LIYO

csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
# ratatui = "0.29.0"
